# NTHN_TEMPLATE_PLUGIN

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  build.sh  configure.sh  notarize.sh
.github/workflows/: build.yml  build_and_test.yml
src/Util/: Util.h
src/audio/: Gain.cpp  Gain.h
src/interface/: ParameterSlider.cpp  ParameterSlider.h
src/parameters/: ParameterDefines.h  StateManager.cpp  StateManager.h  create_parameters.cpp  create_parameters.py  customStringValueFunctions.h  parameters.csv
src/plugin/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PluginProcessorBase.cpp  PluginProcessorBase.h  ProjectInfo.cpp  ProjectInfo.cpp.in  ProjectInfo.h  Utils.h
